# bitcoin-trading

./: .gitignore  BTC_coin_info.json  KRW_coin_info.json  README.md  coindb.py  config.py  main.py  pyproject.toml  test.ipynb
upbit/: README.md  order.py  predict.py  price.py  slack.py  strategy.py  ticks.py
upbit/account/: controller.py  model.py  request.py  response.py
upbit/candle/: controller.py  model.py  request.py
upbit/controllers/: market.py  price.py
upbit/market/: controller.py  model.py  request.py
upbit/metric/: chart_metric.py
upbit/models/: __init__.py
upbit/models/mysql/: account.py  candle.py  market.py  order.py  price.py
upbit/models/request/: order.py  price.py
upbit/models/response/: candle.py  market.py
upbit/modules/: __init__.py  endpoint.json  my_upbit.py  price.py  scaling.py  session_manage.py
upbit/order/: model.py  response.py
upbit/practice/: account.py  marketinfo.py  order.py  pyupbit_practice.py
upbit/price/: controller.py  model.py  response.py
upbit/strategy/: boundary.py
upbit/strategy/economic_regime/: price.py  service.py
upbit/strategy/factors/: beta.py  forecast.py  momentum.py  volatility.py
upbit/workers/coin_info/: market_info.py
